# KoyejoLab-Test-Set-Contam-Generative-Evals

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
experiments/00_sgd_test/: sgd_test.sh
manuscript/: 00_main.tex  01_introduction.tex  02_methodology.tex  03_pretraining.tex  04_further_training.tex  05_generation.tex  06_discussion.tex  99_appendix.tex  README.md  icml2026.sty  math_commands.tex  references_rylan.bib
notebooks/00_gsm8k_platinum/: 00_gsm8k_platinum.py
notebooks/01_minerva_math/: 01_minerva_math.py
notebooks/01_minerva_math_sft/: 01_minerva_math_sft.py
notebooks/02_minerva_math_pt_qwen3/: 02_minerva_math_pt_qwen3.py
notebooks/02_opt_debug/: push_to_team_wandb.py
notebooks/03_bordt2025howmuchcanweforget/: 03_bordt2025howmuchcanweforget.py
notebooks/03_push_to_team_wandb/: push_to_team_wandb.py
notebooks/04_pretraining_loss_scaling/: 04_pretraining_loss_scaling.py  data_analysis.ipynb  full_analysis.py
notebooks/10_gen_eval_math_qwen3_pt/: 10_gen_eval_math_qwen3_pt.py
notebooks/11_math_qwen3_pt_math_verify/: INTEGRATION_NOTES.md  (+1 more)
scripts/: README.md  debug.py  eval_language_model.py  eval_language_model_teacher_forcing.py  pretrain_language_model.py  push_to_team_wandb.py  sft_language_model.py
src/: analyze.py  data.py  globals.py  models.py  neural_scaling_laws.py  plot.py  sft_language_model.py
sweeps/: dataset=gsm8k_model=gemma3-27B.yaml  dataset=gsm8k_model=gemma3-4B.yaml  dataset=gsm8k_model=qwen-4B.yaml  dataset=gsm8k_model=qwen2p5-3B.yaml  dataset=math_debug-sgd.yaml  dataset=math_model=qwen2p5-3B.yaml
(+136 files in other folders)
