[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memorization-scoring-vs-sampling"
version = "0.1.0"
description = "Research project on memorization scoring vs sampling"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "wandb",
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "tqdm",
    "pyyaml",
    "accelerate",
    "peft",
    "trl",
    "evaluate",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools]
packages = ["src"]
